--- a/archives/toutiao-search/2024-05-04.md
+++ b/archives/toutiao-search/2024-05-04.md
@@ -1,61 +1,72 @@
 # 2024-05-04
 
-共 132 条
+共 142 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat May 04 2024 10:15:25 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat May 04 2024 11:00:44 GMT+0800 (China Standard Time) -->
 1. [省级督察组现场核实遭故意封路阻挠](https://so.toutiao.com/search?keyword=省级督察组现场核实遭故意封路阻挠)
-1. [老人想拿回去年给的小费未果报警](https://so.toutiao.com/search?keyword=老人想拿回去年给的小费未果报警)
-1. [文化大餐为“五一”假期增香添彩](https://so.toutiao.com/search?keyword=文化大餐为“五一”假期增香添彩)
-1. [媒体对话梅大高速横放货车拦车司机](https://so.toutiao.com/search?keyword=媒体对话梅大高速横放货车拦车司机)
 1. [竹笋掉落瞬间妈妈扑向孩子](https://so.toutiao.com/search?keyword=竹笋掉落瞬间妈妈扑向孩子)
-1. [女子在泳池教孩子自由泳姿态婀娜](https://so.toutiao.com/search?keyword=女子在泳池教孩子自由泳姿态婀娜)
-1. [河南大学大礼堂火灾反思](https://so.toutiao.com/search?keyword=河南大学大礼堂火灾反思)
-1. [月球背面采样将实现“从0到1”突破](https://so.toutiao.com/search?keyword=月球背面采样将实现“从0到1”突破)
-1. [染色松狮犬变身“熊猫狗”被围观](https://so.toutiao.com/search?keyword=染色松狮犬变身“熊猫狗”被围观)
+1. [60秒回顾嫦娥六号发射精彩瞬间](https://so.toutiao.com/search?keyword=60秒回顾嫦娥六号发射精彩瞬间)
+1. [媒体对话梅大高速横放货车拦车司机](https://so.toutiao.com/search?keyword=媒体对话梅大高速横放货车拦车司机)
 1. [县委书记收房收车：觉得组织查不到](https://so.toutiao.com/search?keyword=县委书记收房收车：觉得组织查不到)
+1. [老人想拿回去年给的小费未果报警](https://so.toutiao.com/search?keyword=老人想拿回去年给的小费未果报警)
+1. [女子在泳池教孩子自由泳姿态婀娜](https://so.toutiao.com/search?keyword=女子在泳池教孩子自由泳姿态婀娜)
+1. [染色松狮犬变身“熊猫狗”被围观](https://so.toutiao.com/search?keyword=染色松狮犬变身“熊猫狗”被围观)
+1. [今年第3个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第3个龙年龙月龙日龙时)
 1. [取消公摊会导致房价上涨吗](https://so.toutiao.com/search?keyword=取消公摊会导致房价上涨吗)
-1. [车主称问界新M7行车时大灯突然熄灭](https://so.toutiao.com/search?keyword=车主称问界新M7行车时大灯突然熄灭)
 1. [华晨宇演唱会唱到日出](https://so.toutiao.com/search?keyword=华晨宇演唱会唱到日出)
-1. [小孩打碎博物馆近12万瓷瓶被免赔](https://so.toutiao.com/search?keyword=小孩打碎博物馆近12万瓷瓶被免赔)
+1. [小羽官宣与王思聪分手](https://so.toutiao.com/search?keyword=小羽官宣与王思聪分手)
+1. [月球背面采样将实现“从0到1”突破](https://so.toutiao.com/search?keyword=月球背面采样将实现“从0到1”突破)
+1. [车主称问界新M7行车时大灯突然熄灭](https://so.toutiao.com/search?keyword=车主称问界新M7行车时大灯突然熄灭)
 1. [这些关于景区的消息不实](https://so.toutiao.com/search?keyword=这些关于景区的消息不实)
+1. [小孩打碎博物馆近12万瓷瓶被免赔](https://so.toutiao.com/search?keyword=小孩打碎博物馆近12万瓷瓶被免赔)
+1. [这6类慢性炎症容易发展为癌症](https://so.toutiao.com/search?keyword=这6类慢性炎症容易发展为癌症)
+1. [张泽群晒与董卿周涛朱军合影](https://so.toutiao.com/search?keyword=张泽群晒与董卿周涛朱军合影)
+1. [鸿蒙奠基者寄语青年：打破技术壁垒](https://so.toutiao.com/search?keyword=鸿蒙奠基者寄语青年：打破技术壁垒)
+1. [俄“硬核军事展览”现场人山人海](https://so.toutiao.com/search?keyword=俄“硬核军事展览”现场人山人海)
+1. [河南大学大礼堂火灾反思](https://so.toutiao.com/search?keyword=河南大学大礼堂火灾反思)
+1. [厦门一杂技演员空中表演时坠亡](https://so.toutiao.com/search?keyword=厦门一杂技演员空中表演时坠亡)
+1. [张韶涵方辟谣商演时在台上拉肚子](https://so.toutiao.com/search?keyword=张韶涵方辟谣商演时在台上拉肚子)
+1. [河大礼堂火灾相关责任人被控制](https://so.toutiao.com/search?keyword=河大礼堂火灾相关责任人被控制)
+1. [网友遇特警小姐姐眼神坚毅走路带风](https://so.toutiao.com/search?keyword=网友遇特警小姐姐眼神坚毅走路带风)
+1. [中央气象台发布双预警](https://so.toutiao.com/search?keyword=中央气象台发布双预警)
+1. [河大老领导深夜痛哭：用泪水扑灭火焰](https://so.toutiao.com/search?keyword=河大老领导深夜痛哭：用泪水扑灭火焰)
+1. [郭碧婷向佐带儿女看望向太](https://so.toutiao.com/search?keyword=郭碧婷向佐带儿女看望向太)
+1. [库克称中国是全球竞争最激烈的市场](https://so.toutiao.com/search?keyword=库克称中国是全球竞争最激烈的市场)
+1. [浙江普陀山高颜值警花警草火了](https://so.toutiao.com/search?keyword=浙江普陀山高颜值警花警草火了)
+1. [官方回应宝泉景区游客滞留经过](https://so.toutiao.com/search?keyword=官方回应宝泉景区游客滞留经过)
+1. [四问河南大学大礼堂失火](https://so.toutiao.com/search?keyword=四问河南大学大礼堂失火)
+1. [杨鸣：郭艾伦能否出战取决于他个人](https://so.toutiao.com/search?keyword=杨鸣：郭艾伦能否出战取决于他个人)
+1. [4月深圳二手房网签再次突破荣枯线](https://so.toutiao.com/search?keyword=4月深圳二手房网签再次突破荣枯线)
+1. [大礼堂失火灼痛万千河大人](https://so.toutiao.com/search?keyword=大礼堂失火灼痛万千河大人)
+1. [上海外滩特警成五一限定“景点”](https://so.toutiao.com/search?keyword=上海外滩特警成五一限定“景点”)
+1. [一个集体里的90后15人荣立一等功](https://so.toutiao.com/search?keyword=一个集体里的90后15人荣立一等功)
+1. [大礼堂在河南大学是一种怎样的存在](https://so.toutiao.com/search?keyword=大礼堂在河南大学是一种怎样的存在)
+1. [杭州地铁遇大客流有新招](https://so.toutiao.com/search?keyword=杭州地铁遇大客流有新招)
+1. [日本国奥夺得U23亚洲杯冠军](https://so.toutiao.com/search?keyword=日本国奥夺得U23亚洲杯冠军)
+1. [现在是买黄金的好时机吗](https://so.toutiao.com/search?keyword=现在是买黄金的好时机吗)
+1. [汤尤杯小组赛结束 运动员不舍告别](https://so.toutiao.com/search?keyword=汤尤杯小组赛结束+运动员不舍告别)
+1. [嫦娥六号发射成功](https://so.toutiao.com/search?keyword=嫦娥六号发射成功)
+1. [周琦18篮板 CBA半决赛广东1比1辽宁](https://so.toutiao.com/search?keyword=周琦18篮板+CBA半决赛广东1比1辽宁)
+1. [台一男子将儿子泡热水箱致淹死获刑](https://so.toutiao.com/search?keyword=台一男子将儿子泡热水箱致淹死获刑)
+1. [亳州王婆说媒劝小伙牵手怀孕女孩](https://so.toutiao.com/search?keyword=亳州王婆说媒劝小伙牵手怀孕女孩)
+1. [河大称火灾发生时礼堂内无施工人员](https://so.toutiao.com/search?keyword=河大称火灾发生时礼堂内无施工人员)
+1. [游客五一到长沙排队打卡派出所](https://so.toutiao.com/search?keyword=游客五一到长沙排队打卡派出所)
+1. [长沙公布购房“以旧换新”细则](https://so.toutiao.com/search?keyword=长沙公布购房“以旧换新”细则)
+1. [河大礼堂原定4月7日前修缮完工](https://so.toutiao.com/search?keyword=河大礼堂原定4月7日前修缮完工)
+1. [文化大餐为“五一”假期增香添彩](https://so.toutiao.com/search?keyword=文化大餐为“五一”假期增香添彩)
 1. [广东外援谢场时遭辽宁球迷扔水瓶](https://so.toutiao.com/search?keyword=广东外援谢场时遭辽宁球迷扔水瓶)
 1. [特立尼达和多巴哥承认巴勒斯坦国](https://so.toutiao.com/search?keyword=特立尼达和多巴哥承认巴勒斯坦国)
-1. [俄“硬核军事展览”现场人山人海](https://so.toutiao.com/search?keyword=俄“硬核军事展览”现场人山人海)
-1. [张韶涵方辟谣商演时在台上拉肚子](https://so.toutiao.com/search?keyword=张韶涵方辟谣商演时在台上拉肚子)
-1. [今年第3个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第3个龙年龙月龙日龙时)
-1. [河大礼堂火灾相关责任人被控制](https://so.toutiao.com/search?keyword=河大礼堂火灾相关责任人被控制)
-1. [厦门一杂技演员空中表演时坠亡](https://so.toutiao.com/search?keyword=厦门一杂技演员空中表演时坠亡)
-1. [库克称中国是全球竞争最激烈的市场](https://so.toutiao.com/search?keyword=库克称中国是全球竞争最激烈的市场)
-1. [四问河南大学大礼堂失火](https://so.toutiao.com/search?keyword=四问河南大学大礼堂失火)
 1. [辽粤大战徐杰怒吼张镇麟](https://so.toutiao.com/search?keyword=辽粤大战徐杰怒吼张镇麟)
 1. [魔术胜骑士将系列赛拖入抢七](https://so.toutiao.com/search?keyword=魔术胜骑士将系列赛拖入抢七)
-1. [河大老领导深夜痛哭：用泪水扑灭火焰](https://so.toutiao.com/search?keyword=河大老领导深夜痛哭：用泪水扑灭火焰)
-1. [网友遇特警小姐姐眼神坚毅走路带风](https://so.toutiao.com/search?keyword=网友遇特警小姐姐眼神坚毅走路带风)
-1. [嫦娥六号发射成功](https://so.toutiao.com/search?keyword=嫦娥六号发射成功)
-1. [大礼堂失火灼痛万千河大人](https://so.toutiao.com/search?keyword=大礼堂失火灼痛万千河大人)
-1. [官方回应宝泉景区游客滞留经过](https://so.toutiao.com/search?keyword=官方回应宝泉景区游客滞留经过)
-1. [郭碧婷向佐带儿女看望向太](https://so.toutiao.com/search?keyword=郭碧婷向佐带儿女看望向太)
 1. [轰6K飞行员说遭遇外军机肯定不会怂](https://so.toutiao.com/search?keyword=轰6K飞行员说遭遇外军机肯定不会怂)
-1. [上海外滩特警成五一限定“景点”](https://so.toutiao.com/search?keyword=上海外滩特警成五一限定“景点”)
-1. [亳州王婆说媒劝小伙牵手怀孕女孩](https://so.toutiao.com/search?keyword=亳州王婆说媒劝小伙牵手怀孕女孩)
-1. [大礼堂在河南大学是一种怎样的存在](https://so.toutiao.com/search?keyword=大礼堂在河南大学是一种怎样的存在)
-1. [台一男子将儿子泡热水箱致淹死获刑](https://so.toutiao.com/search?keyword=台一男子将儿子泡热水箱致淹死获刑)
-1. [小羽官宣与王思聪分手](https://so.toutiao.com/search?keyword=小羽官宣与王思聪分手)
-1. [河大礼堂原定4月7日前修缮完工](https://so.toutiao.com/search?keyword=河大礼堂原定4月7日前修缮完工)
 1. [湖人正式解雇主教练哈姆](https://so.toutiao.com/search?keyword=湖人正式解雇主教练哈姆)
-1. [张泽群晒与董卿周涛朱军合影](https://so.toutiao.com/search?keyword=张泽群晒与董卿周涛朱军合影)
-1. [杭州地铁遇大客流有新招](https://so.toutiao.com/search?keyword=杭州地铁遇大客流有新招)
 1. [KPL季后赛AG轻松晋级](https://so.toutiao.com/search?keyword=KPL季后赛AG轻松晋级)
-1. [河大称火灾发生时礼堂内无施工人员](https://so.toutiao.com/search?keyword=河大称火灾发生时礼堂内无施工人员)
 1. [以方称若别无选择犹太人将孤军奋战](https://so.toutiao.com/search?keyword=以方称若别无选择犹太人将孤军奋战)
 1. [湖人新主帅将成2012以来第八任主帅](https://so.toutiao.com/search?keyword=湖人新主帅将成2012以来第八任主帅)
-1. [长沙公布购房“以旧换新”细则](https://so.toutiao.com/search?keyword=长沙公布购房“以旧换新”细则)
 1. [美高校反战抗议持续 拜登首次回应](https://so.toutiao.com/search?keyword=美高校反战抗议持续+拜登首次回应)
 1. [太阳爆发强耀斑 对中国上空有影响](https://so.toutiao.com/search?keyword=太阳爆发强耀斑+对中国上空有影响)
-1. [日本国奥夺得U23亚洲杯冠军](https://so.toutiao.com/search?keyword=日本国奥夺得U23亚洲杯冠军)
 1. [竹笋掉落瞬间妈妈扑向孩子被砸脑袋](https://so.toutiao.com/search?keyword=竹笋掉落瞬间妈妈扑向孩子被砸脑袋)
-1. [游客五一到长沙排队打卡派出所](https://so.toutiao.com/search?keyword=游客五一到长沙排队打卡派出所)
 1. [游客滞留半夜徒步下山 宝泉致歉](https://so.toutiao.com/search?keyword=游客滞留半夜徒步下山+宝泉致歉)
 1. [中国三航母全家福来了](https://so.toutiao.com/search?keyword=中国三航母全家福来了)
 1. [美沙将签历史性协议 谁是最大赢家](https://so.toutiao.com/search?keyword=美沙将签历史性协议+谁是最大赢家)
@@ -77,7 +88,6 @@
 1. [美国人在莫斯科参观被缴获美制装备](https://so.toutiao.com/search?keyword=美国人在莫斯科参观被缴获美制装备)
 1. [俄回应未获瑞士邀请参加和平会议](https://so.toutiao.com/search?keyword=俄回应未获瑞士邀请参加和平会议)
 1. [岛内舆论热议福建舰海试：真不得了](https://so.toutiao.com/search?keyword=岛内舆论热议福建舰海试：真不得了)
-1. [周琦18篮板 CBA半决赛广东1比1辽宁](https://so.toutiao.com/search?keyword=周琦18篮板+CBA半决赛广东1比1辽宁)
 1. [五一来北京骑游](https://so.toutiao.com/search?keyword=五一来北京骑游)
 1. [嫦娥六号月背出差之旅日程表来了](https://so.toutiao.com/search?keyword=嫦娥六号月背出差之旅日程表来了)
 1. [普京就职典礼邀请函曝光](https://so.toutiao.com/search?keyword=普京就职典礼邀请函曝光)
